**  denotes quite substantial/important changes
*** denotes really big changes 
ISSUES:

1.7-7

unstable

* slanczos bug fixes --- could segfault if k negative. Could also fail to 
  return correct values when k small and kl < 0 (due to a convergence 
  testing bug, now fixed)

* 'cc' Predict.matrix bug fix - prediction failed for single points.

* summary.gam failed for single coefficient random effects. fixed.

* gam returns rV, where t(rV)%*%rV*scale is Bayesian cov matrix.
 
1.7-6

** factor `by' variable handling extended: if a by variable is an
   ordered factor then the first level is treated as a reference level
   and smooths are only generated for the other levels. This is useful 
   for avoiding identifiability issues in complex models with factor by 
   variables. 

* bam bug fix. aic was reported incorrectly (too low). 

1.7-5

* gam.fit3 modified to converge more reliably with links that don't guarantee
  feasible mu (e.g poisson(link="identity")). One vulnerability removed + a
  new approach taken, which restarts the iteration from null model 
  coefficients if the original start values lead to an infinite deviance.

* Duchon spline bug fix (could fail to create model matrix if 
  number of data was one greateer than number of unique data).
    
* fix so that 'main' is not ignored by plot.gam (got broken in 1.7-0 
  object orientation of smooth plotting)

* Duchon spline constructor now catches k > number of data errors.

* fix of a gamm bug whereby a model with no smooths would fail after 
  fitting because of a missing smoothing parameter vector.

* fix to bug introduced to gam/bam in 1.7-3, whereby '...' were passed to 
  gam.control, instead of passing on to fitting routines. 

* fix of some compiler warnings in matrix.c 

* fix to indexing bug in monotonic additive model example in ?pcls.

1.7-4

* Fix for single letter typo bug in C code called by slanczos, could 
  actually segfault on matrices of less than 10 by 10.
